hugr-llvm/src/extension/snapshots/hugr_llvm__extension__int__test__emission@pre-mem2reg@llvm20_is_to_u_[3].snap
---
source: hugr-llvm/src/extension/int.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

@0 = private unnamed_addr constant [33 x i8] c"is_to_u called on negative value\00", align 1
@prelude.panic_template = private unnamed_addr constant [34 x i8] c"Program panicked (signal %i): %s\0A\00", align 1

define private i8 @_hl.main.1(i8 %0) {
alloca_block:
  %"0" = alloca i8, align 1
  %"2_0" = alloca i8, align 1
  %"4_0" = alloca i8, align 1
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  store i8 %0, ptr %"2_0", align 1
  %"2_01" = load i8, ptr %"2_0", align 1
  %bounds_check = icmp sge i8 %"2_01", 0
  br label %panic_if_0

panic_if_0:                                       ; preds = %entry_block
  switch i1 %bounds_check, label %panic [
    i1 true, label %exit
  ]

panic:                                            ; preds = %panic_if_0
  %1 = call i32 (ptr, ...) @printf(ptr @prelude.panic_template, i32 2, ptr @0)
  call void @abort()
  br label %exit

exit:                                             ; preds = %panic_if_0, %panic
  store i8 %"2_01", ptr %"4_0", align 1
  %"4_02" = load i8, ptr %"4_0", align 1
  store i8 %"4_02", ptr %"0", align 1
  %"03" = load i8, ptr %"0", align 1
  ret i8 %"03"
}

declare i32 @printf(ptr, ...)

declare void @abort()
