hugr-llvm/src/extension/snapshots/hugr_llvm__extension__int__test__iadd@llvm14.snap
---
source: src/extension/int.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

define i8 @_hl.main.1(i8 %0, i8 %1) {
alloca_block:
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  %2 = add i8 %0, %1
  ret i8 %2
}
